# stt-exp

./: .env.example  .gitignore  README.md  pyproject.toml
data/: test-wavs.csv
scripts/: download_sherpa_model.py  parakeet_live_worker.py  parakeet_worker.py  run_live_external_models.sh  run_live_gpu_models.sh  serve_voxtral_baseline.sh  serve_voxtral_optimized.sh
src/stt_exp/: __init__.py  audio.py  cli.py  live_mic.py  manifest.py  metrics.py  voxtral_eou.py  voxtral_model.py
src/stt_exp/providers/: base.py  deepgram_realtime.py  moonshine_realtime.py  parakeet_external.py  sherpa_realtime.py  voxtral_realtime.py
tests/: test_live_mic.py  test_manifest.py  test_metrics.py  test_voxtral_eou.py  test_voxtral_model.py  test_voxtral_realtime_provider.py
